# ADS-3

./: CMakeLists.txt  README.md
include/: alg.h
src/: CMakeLists.txt  alg.cpp
test/: CMakeLists.txt  tests.cpp
